--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@
   <body>
     <div class="calculator">
       <h1 class="heading">Calculator</h1>
-      <input type="text" class="screen" />
+      <input type="text" id="inputText" class="screen" />
 
       <div class="buttons">
-        <button type="button" class="btn" data-num="7">7</button>
-        <button type="button" class="btn" data-num="8">8</button>
-        <button type="button" class="btn" data-num="9">9</button>
-        <button type="button" class="btn" data-num="+" id="funcbtn">+</button>
+        <button type="button" class="btn-clear" onclick="clr()">C</button>
+        <button type="button" class="btn" onclick="del()">DEL</button>
+        <button type="button" class="btn" onclick="calculate('%')">%</button>
+        <button type="button" class="btn" onclick="calculate('/')">/</button>
 
         <br />
 
-        <button type="button" class="btn" data-num="4">4</button>
-        <button type="button" class="btn" data-num="5">5</button>
-        <button type="button" class="btn" data-num="6">6</button>
-        <button type="button" class="btn" data-num="-" id="funcbtn">-</button>
+        <button type="button" class="btn" onclick="calculate(7)">7</button>
+        <button type="button" class="btn" onclick="calculate(8)">8</button>
+        <button type="button" class="btn" onclick="calculate(9)">9</button>
+        <button type="button" class="btn" onclick="calculate('+')">+</button>
 
         <br />
 
-        <button type="button" class="btn" data-num="1">1</button>
-        <button type="button" class="btn" data-num="2">2</button>
-        <button type="button" class="btn" data-num="3">3</button>
-        <button type="button" class="btn" data-num="*" id="funcbtn">x</button>
+        <button type="button" class="btn" onclick="calculate(4)">4</button>
+        <button type="button" class="btn" onclick="calculate(5)">5</button>
+        <button type="button" class="btn" onclick="calculate(6)">6</button>
+        <button type="button" class="btn" onclick="calculate('-')">-</button>
 
         <br />
 
-        <button type="button" class="btn" data-num="0">0</button>
-        <button type="button" class="btn-clear" id="btnx">AC</button>
-        <button type="button" class="btn-equal" id="btnx">=</button>
-        <button type="button" class="btn" data-num="/" id="funcbtn">/</button>
+        <button type="button" class="btn" onclick="calculate(1)">1</button>
+        <button type="button" class="btn" onclick="calculate(2)">2</button>
+        <button type="button" class="btn" onclick="calculate(3)">3</button>
+        <button type="button" class="btn" onclick="calculate('*')">*</button>
+
+        <br />
+
+        <button type="button" class="btn" onclick="calculate(0)">0</button>
+        <button type="button" class="btn-equal" onclick="Result()">=</button>
       </div>
     </div>
 
